--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,6 +236,14 @@ h6 {
   background: url("../img/WhatsApp Image 2023-05-31 at 14.32.32.jpg") top center;
   background-size: cover;
 }
+@media (max-width: 768px) {
+  #hero {
+  width: 100%;
+  height: 100vh;
+  background: url("../img/W1hatsApp Image 2023-05-31 at 14.32.32.jpg") top center;
+  background-size: cover;
+  }
+}
 
 #hero:before {
   content: "";
