--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ h6 {
 @media(max-width: 767px) {
   #header {
     position: fixed;
-    top: 64px;
+    top: 0;
     left: 0;
     bottom: 0;
     width: 300px;
