--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ h6 {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
-@media(max-width: 767px) {
+@media(max-width: 991px) {
   #header {
     position: fixed;
     top: 0;
@@ -136,27 +136,26 @@ h6 {
     width: 120px;
     border: 8px solid #2c2f3f;
   }
+}
 
-  #header .profile .social-links a {
-    font-size: 18px;
-    display: inline-block;
-    background: #212431;
-    color: #fff;
-    line-height: 1;
-    padding: 8px 0;
-    margin-right: 4px;
-    border-radius: 50%;
-    text-align: center;
-    width: 36px;
-    height: 36px;
-    transition: 0.3s;
-  }
-
-  #header .profile .social-links a:hover {
-    background: #149ddd;
-    color: #fff;
-    text-decoration: none;
-  }
+.social-links a {
+  font-size: 18px;
+  display: inline-block;
+  background: #212431;
+  color: #fff;
+  line-height: 1;
+  padding: 8px 0;
+  margin-right: 4px;
+  border-radius: 50%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+}
+.social-links a:hover {
+  background: #149ddd;
+  color: #fff;
+  text-decoration: none;
 }
 
 #header .profile h1 {
@@ -198,7 +197,7 @@ h6 {
   padding-right: 30px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   #header {
     left: -300px;
   }
@@ -218,7 +217,7 @@ h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /* Desktop Navigation */
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .nav-menu {
     padding: 30px 0 0 0;
   }
@@ -311,7 +310,7 @@ h6 {
   background: url("../img/WhatsApp Image 2023-05-31 at 14.32.32.jpg") top center;
   background-size: cover;
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   #hero {
   width: 100%;
   height: 100vh;
@@ -365,7 +364,7 @@ h6 {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   #hero h1 {
     font-size: 28px;
     line-height: 36px;
@@ -750,7 +749,7 @@ section {
   content: "/";
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .breadcrumbs .d-flex {
     display: block !important;
   }
