--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ h6 {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
-@media(max-width: 991px) {
+@media (max-width: 991px) {
   #header {
     position: fixed;
     top: 0;
@@ -75,7 +75,7 @@ h6 {
     background: #040b14;
     overflow-y: auto;
   }
-  
+
   #header .profile img {
     margin: 15px auto;
     display: block;
@@ -212,18 +212,18 @@ h6 {
   .nav-menu {
     padding: 30px 0 0 0;
   }
-  
+
   .nav-menu * {
     margin: 0;
     padding: 0;
     list-style: none;
   }
-  
-  .nav-menu>ul>li {
+
+  .nav-menu > ul > li {
     position: relative;
     white-space: nowrap;
   }
-  
+
   /* Mobile Navigation */
   .mobile-nav-toggle {
     position: fixed;
@@ -267,7 +267,7 @@ h6 {
   .nav-menu a:hover,
   .nav-menu .active,
   .nav-menu .active:focus,
-  .nav-menu li:hover>a {
+  .nav-menu li:hover > a {
     text-decoration: none;
     color: #fff;
   }
@@ -275,14 +275,14 @@ h6 {
   .nav-menu a:hover i,
   .nav-menu .active i,
   .nav-menu .active:focus i,
-  .nav-menu li:hover>a i {
+  .nav-menu li:hover > a i {
     color: #149ddd;
   }
-  
+
   .mobile-nav-active {
     overflow: hidden;
   }
-  
+
   .mobile-nav-active #header {
     left: 0;
   }
@@ -303,10 +303,11 @@ h6 {
 }
 @media (max-width: 991px) {
   #hero {
-  width: 100%;
-  height: 100vh;
-  background: url("../img/W1hatsApp Image 2023-05-31 at 14.32.32.jpg") top center;
-  background-size: cover;
+    width: 100%;
+    height: 100vh;
+    background: url("../img/W1hatsApp Image 2023-05-31 at 14.32.32.jpg") top
+      center;
+    background-size: cover;
   }
 }
 
@@ -609,7 +610,7 @@ section {
   background: rgba(20, 157, 221, 0.95);
 }
 
-.portfolio .portfolio-wrap .portfolio-links a+a {
+.portfolio .portfolio-wrap .portfolio-links a + a {
   border-left: 1px solid #37b3ed;
 }
 
@@ -642,7 +643,10 @@ section {
   position: relative;
 }
 
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
+.portfolio-details
+  .portfolio-details-slider
+  .swiper-pagination
+  .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
   background-color: #fff;
@@ -650,7 +654,10 @@ section {
   border: 1px solid #149ddd;
 }
 
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
+.portfolio-details
+  .portfolio-details-slider
+  .swiper-pagination
+  .swiper-pagination-bullet-active {
   background-color: #149ddd;
 }
 
@@ -673,7 +680,7 @@ section {
   font-size: 15px;
 }
 
-.portfolio-details .portfolio-info ul li+li {
+.portfolio-details .portfolio-info ul li + li {
   margin-top: 10px;
 }
 
@@ -713,11 +720,11 @@ section {
   font-size: 15px;
 }
 
-.breadcrumbs ol li+li {
+.breadcrumbs ol li + li {
   padding-left: 10px;
 }
 
-.breadcrumbs ol li+li::before {
+.breadcrumbs ol li + li::before {
   display: inline-block;
   padding-right: 10px;
   color: #0e2442;
@@ -762,4 +769,3 @@ section {
   font-size: 13px;
   color: #eaebf0;
 }
- 
