--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,7 +350,7 @@ h6 {
   border-bottom: 3px solid #149ddd;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 991px) {
   #hero {
     background-attachment: fixed;
   }
@@ -463,6 +463,12 @@ section {
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   color: #050d18;
+}
+
+@media (min-width: 991px) {
+  .skills .zoom:hover {
+    transform: scale(1.2)
+  }
 }
 
 /*--------------------------------------------------------------
