--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,7 +314,7 @@ h6 {
   #hero {
     width: 100%;
     height: 100vh;
-    background: url("../img/hero-s") top
+    background: url("../img/hero-s.jpg") top
       center;
     background-size: cover;
   }
