--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,17 +3,22 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #272829;
+  color: #8892b0;
+  background-color: #070a13;
 }
 
 a {
-  color: #149ddd;
+  color: #A1B3EE;
   text-decoration: none;
 }
 
 a:hover {
-  color: #37b3ed;
+  color: #A1B3EE;
   text-decoration: none;
+}
+
+p span {
+  color: #CCD6F6;
 }
 
 h1,
@@ -35,7 +40,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #149ddd;
+  background: #A1B3EE;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -44,13 +49,13 @@ h6 {
 
 .back-to-top i {
   font-size: 28px;
-  color: #fff;
+  color: #CCD6F6;
   line-height: 0;
 }
 
 .back-to-top:hover {
   background: #2eafec;
-  color: #fff;
+  color: #CCD6F6;
 }
 
 .back-to-top.active {
@@ -95,7 +100,7 @@ h6 {
 
   #header .profile h1 a,
   #header .profile h1 a:hover {
-    color: #fff;
+    color: #CCD6F6;
     text-decoration: none;
   }
 
@@ -103,7 +108,7 @@ h6 {
     font-size: 18px;
     display: inline-block;
     background: #212431;
-    color: #fff;
+    color: #CCD6F6;
     line-height: 1;
     padding: 8px 0;
     margin-right: 4px;
@@ -115,8 +120,8 @@ h6 {
   }
 
   #header .profile .social-links a:hover {
-    background: #149ddd;
-    color: #fff;
+    background: #A1B3EE;
+    color: #CCD6F6;
     text-decoration: none;
   }
 
@@ -142,7 +147,7 @@ h6 {
   font-size: 18px;
   display: inline-block;
   background: #212431;
-  color: #fff;
+  color: #CCD6F6;
   line-height: 1;
   padding: 8px 0;
   margin-right: 4px;
@@ -153,8 +158,8 @@ h6 {
   transition: 0.3s;
 }
 .social-links a:hover {
-  background: #149ddd;
-  color: #fff;
+  background: #A1B3EE;
+  color: #CCD6F6;
   text-decoration: none;
 }
 
@@ -169,7 +174,7 @@ h6 {
 
 #header .profile h1 a,
 #header .profile h1 a:hover {
-  color: #fff;
+  color: #CCD6F6;
   text-decoration: none;
 }
 
@@ -234,8 +239,7 @@ h6 {
     font-size: 24px;
     transition: all 0.4s;
     outline: none !important;
-    background-color: #149ddd;
-    color: #fff;
+    color: #A1B3EE;
     width: 40px;
     height: 40px;
     display: inline-flex;
@@ -269,14 +273,14 @@ h6 {
   .nav-menu .active:focus,
   .nav-menu li:hover > a {
     text-decoration: none;
-    color: #fff;
+    color: #CCD6F6;
   }
 
   .nav-menu a:hover i,
   .nav-menu .active i,
   .nav-menu .active:focus i,
   .nav-menu li:hover > a i {
-    color: #149ddd;
+    color: #A1B3EE;
   }
 
   .mobile-nav-active {
@@ -298,26 +302,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-l.jpg") top center;
   background-size: cover;
-}
-@media (max-width: 991px) {
-  #hero {
-    width: 100%;
-    height: 100vh;
-    background: url("../img/hero-m.jpg") top
-      center;
-    background-size: cover;
-  }
-}
-@media (max-width: 768px) {
-  #hero {
-    width: 100%;
-    height: 100vh;
-    background: url("../img/hero-s.jpg") top
-      center;
-    background-size: cover;
-  }
 }
 
 #hero:before {
@@ -332,61 +317,62 @@ h6 {
 }
 
 #hero .hero-container {
+  margin-left: 5vw;
+  margin-top: 10vw;
   position: relative;
   z-index: 2;
   min-width: 300px;
 }
 
 #hero h1 {
-  margin: 0 0 10px 0;
+  margin: 0 0 15px 0;
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #fff;
+  color: #CCD6F6;
 }
 
 #hero h2 {
-  margin: 0 0 10px 0;
-  font-size: 36px;
+  margin: 0 0 40px 0;
+  font-size: 60px;
   font-weight: 700;
   line-height: 56px;
-  color: #fff;
+  color: #8892B0;
 }
 
 #hero p {
-  color: #fff;
-  margin-bottom: 50px;
-  font-size: 26px;
+  color: #8892B0;
+  margin-bottom: 35px;
+  font-size: 18px;
   font-family: "Poppins", sans-serif;
+  max-width: 25vw;
 }
 
 #hero p span {
-  color: #fff;
-  padding-bottom: 4px;
+  color: #CCD6F6;
   letter-spacing: 1px;
-  border-bottom: 3px solid #149ddd;
-}
-
-@media (min-width: 991px) {
-  #hero {
-    background-attachment: fixed;
-  }
 }
 
 @media (max-width: 991px) {
+  #hero {
+    padding-top: 10vh;
+  }
   #hero h1 {
-    font-size: 30px;
+    font-size: 40px;
     line-height: 36px;
   }
 
   #hero h2 {
-    font-size: 24px;
-    line-height: 26px;
+    font-size: 38px;
+    line-height: 35px;
+    margin-bottom: 20px;
   }
   
   #hero p {
-    font-size: 20px;
+    font-size: 16px;
     line-height: 24px;
+    margin-bottom: 20px;
+    max-width: fit-content;
   }
 }
 
@@ -396,10 +382,6 @@ h6 {
 section {
   padding: 60px 0;
   overflow: hidden;
-}
-
-.section-bg {
-  background: #f5f8fd;
 }
 
 .section-title {
@@ -412,7 +394,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #173b6c;
+  color: #CCD6F6;
 }
 
 .section-title h2::after {
@@ -421,7 +403,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #149ddd;
+  background: #A1B3EE;
   bottom: 0;
   left: 0;
 }
@@ -436,7 +418,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #173b6c;
+  color: #CCD6F6;
 }
 
 .about .content ul {
@@ -457,7 +439,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #149ddd;
+  color: #A1B3EE;
   line-height: 0;
 }
 
@@ -483,11 +465,20 @@ section {
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-  color: #050d18;
+  color: #CCD6F6;
+}
+
+.dim {
+  opacity: 0.8;
+  filter: grayscale(1%);
+  -webkit-filter: grayscale(1%);
 }
 
 @media (min-width: 991px) {
   .skills .zoom:hover {
+    opacity: 1;
+    filter: grayscale(0%);
+    -webkit-filter: grayscale(1%);
     transform: scale(1.2)
   }
 }
@@ -500,13 +491,13 @@ section {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #050d18;
+  color: #CCD6F6;
 }
 
 .achievements .achievements-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #1f5297;
+  border-left: 2px solid #8892b0;
   position: relative;
 }
 
@@ -516,13 +507,12 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #050d18;
+  color: #CCD6F6;
   margin-bottom: 10px;
 }
 
 .achievements .achievements-item h5 {
   font-size: 16px;
-  background: #e4edf9;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
@@ -549,8 +539,8 @@ section {
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #fff;
-  border: 2px solid #1f5297;
+  background: #8892b0;
+  border: 2px solid #8892b0;
 }
 
 /*--------------------------------------------------------------
@@ -565,7 +555,7 @@ section {
   margin: 0 auto 35px auto;
   list-style: none;
   text-align: center;
-  background: #fff;
+  background: #0A1307;
   border-radius: 50px;
   padding: 2px 15px;
 }
@@ -578,14 +568,14 @@ section {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #272829;
+  color: #8892b0;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
 
 .portfolio #portfolio-filters li:hover,
 .portfolio #portfolio-filters li.filter-active {
-  color: #149ddd;
+  color: #A1B3EE;
 }
 
 .portfolio #portfolio-filters li:last-child {
@@ -625,20 +615,20 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a {
-  color: #fff;
+  color: #CCD6F6;
   font-size: 28px;
   text-align: center;
-  background: rgba(20, 157, 221, 0.75);
+  background: #8892b0;
   transition: 0.3s;
   width: 50%;
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  background: rgba(20, 157, 221, 0.95);
+  background: #A1B3EE;
 }
 
 .portfolio .portfolio-wrap .portfolio-links a + a {
-  border-left: 1px solid #37b3ed;
+  border-left: 1px solid #8892b0;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -676,16 +666,16 @@ section {
   .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
-  background-color: #fff;
+  background-color: #CCD6F6;
   opacity: 1;
-  border: 1px solid #149ddd;
+  border: 1px solid #A1B3EE;
 }
 
 .portfolio-details
   .portfolio-details-slider
   .swiper-pagination
   .swiper-pagination-bullet-active {
-  background-color: #149ddd;
+  background-color: #A1B3EE;
 }
 
 .portfolio-details .portfolio-info {
