--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ a:hover {
 }
 
 p span {
-  color: #CCD6F6;
+  color: #A1B3EE;
 }
 
 h1,
@@ -349,7 +349,7 @@ h6 {
 }
 
 #hero p span {
-  color: #CCD6F6;
+  color: #A1B3EE;
   letter-spacing: 1px;
 }
 
