--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -539,8 +539,8 @@ section {
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #8892b0;
-  border: 2px solid #8892b0;
+  background: #A1B3EE;
+  border: 2px solid #A1B3EE;
 }
 
 /*--------------------------------------------------------------
