--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -497,7 +497,7 @@ section {
 .achievements .achievements-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #8892b0;
+  border-left: 2px solid #A1B3EE;
   position: relative;
 }
 
