--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ h6 {
 @media (max-width: 991px) {
   #header {
     position: fixed;
-    top: 0;
+    top: 7vh;
     left: 0;
     bottom: 0;
     width: 300px;
@@ -206,6 +206,10 @@ h6 {
   .container-fluid {
     padding-left: 12px;
     padding-right: 12px;
+  }
+  .navbar-brand {
+    color: #CCD6F6;
+    z-index: 9996;
   }
 }
 
