changed mobile navigation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,6 +347,12 @@ h6 {
   }
 }
 
+@media (max-height: 500px) {
+  #hero {
+    padding-top: 0;
+  }
+}
+
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
