--- a/styles.css
+++ b/styles.css
@@ -425,18 +425,17 @@ section {
 }
 
 .btn-resume {
-  background-color: #212431; /* Theme color (adjust as needed) */
-  color: #CCD6F6;
+  background-color: #CCD6F6; /* Theme color (adjust as needed) */
+  color: #212431;
   padding: 10px 20px;
   border-radius: 30px;
   border: none;
   font-weight: 500;
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
-  box-shadow: 0 4px 8px rgba(78, 115, 223, 0.2);
   display: inline-flex;
   align-items: center;
   gap: 8px;
-  font-weight:bold;
+  font-weight:600;
 }
 
 .btn-resume:hover {
